# BattleShipAssignmentGV

./: BattleShipAssignmentGV.cpp  BattleShipAssignmentGV.sln  BattleShipAssignmentGV.vcxproj  BattleShipAssignmentGV.vcxproj.filters  CMakeLists.txt  README.md  board.cpp  board.h  consts.h  game.cpp  game.h
lib/: board.h  game.h
src/: game.cpp
